--- a/src/pages/fund/fund.html
+++ b/src/pages/fund/fund.html
@@ -1,6 +1,6 @@
  <!-- Hero Section -->
   <section class="token-hero-section fund">
-    <div class="token-hero-container">
+    <div class="token-hero-container fund">
       <h1 class="token-hero-title fund"> <span>Finity</span><span>Fund</span></h1>
       <p class="token-hero-description fund">
        The Finity Foundation is a fund that fuels the development of new active projects, as well as the possibility of discovering new fragments of the ecosystem.
