main_page adapted to mobile

--- a/src/pages/fund/fund.html
+++ b/src/pages/fund/fund.html
@@ -105,7 +105,7 @@
 
 <!-- FAQ -->
 
-    <section class="main-faq-section">
+    <section class="main-faq-section fund">
       <div class="main-faq-section-container">
 
         <div class="main-faq-left">
@@ -115,20 +115,20 @@
         <div class="main-faq-right">
 
           <div class="main-faq-item fund">
-            <button class="main-faq-question">What is Finity Touch? <span class="toggle">+</span></button>
-            <div class="main-faq-answer">Finity Touch is ... </div>
+            <button class="main-faq-question fund">What is Finity Touch? <span class="toggle">+</span></button>
+            <div class="main-faq-answer fund">Finity Touch is ... </div>
           </div>
           <div class="main-faq-item fund">
-            <button class="main-faq-question">Where can I buy a Finity token? <span class="toggle">+</span></button>
-            <div class="main-faq-answer">You can buy ...</div>
+            <button class="main-faq-question fund">Where can I buy a Finity token? <span class="toggle">+</span></button>
+            <div class="main-faq-answer fund">You can buy ...</div>
           </div>
           <div class="main-faq-item fund">
-            <button class="main-faq-question">What is the Finity token used for? <span class="toggle">+</span></button>
-            <div class="main-faq-answer">15% of the issue of Finity tokens is used as a monetary fund for the implementation of your ideas.</div>
+            <button class="main-faq-question fund">What is the Finity token used for? <span class="toggle">+</span></button>
+            <div class="main-faq-answer fund">15% of the issue of Finity tokens is used as a monetary fund for the implementation of your ideas.</div>
           </div>
           <div class="main-faq-item fund">
-            <button class="main-faq-question">Didn't find the answer to your question? <span class="toggle">+</span></button>
-            <div class="main-faq-answer">Contact us at ...</div>
+            <button class="main-faq-question fund">Didn't find the answer to your question? <span class="toggle">+</span></button>
+            <div class="main-faq-answer fund">Contact us at ...</div>
           </div>
         </div>
 
