--- a/src/pages/main-page/main_page.html
+++ b/src/pages/main-page/main_page.html
@@ -22,7 +22,7 @@
 
     <!-- Swiper container -->
     <div class="swiper main-features-swiper">
-      <div class="swiper-wrapper">
+      <div class="swiper-wrapper main-features">
         <!-- Slides -->
         <div class="swiper-slide main-features">
           <div class="main-features-inner">
@@ -85,7 +85,7 @@
       <div class="main-about-gif-container">
       </div>
 
-      <div>
+      <div class="main-about-content-container">
         <div class="main-about-text-container">
 
           <div class="main-about-frame">
@@ -167,7 +167,7 @@
       <div class="main-about-gif-container-3">
       </div>
 
-      <div>
+      <div class="main-about-content-container">
         <div class="main-about-text-container">
 
           <div class="main-about-frame">
