--- a/src/pages/fund/fund.html
+++ b/src/pages/fund/fund.html
@@ -1,11 +1,14 @@
  <!-- Hero Section -->
   <section class="token-hero-section fund">
     <div class="token-hero-container fund">
+      <div class="token-hero-mobile-gif fund"></div>
+      <div class="token-hero-content fund">
       <h1 class="token-hero-title fund"> <span>Finity</span><span>Fund</span></h1>
       <p class="token-hero-description fund">
        The Finity Foundation is a fund that fuels the development of new active projects, as well as the possibility of discovering new fragments of the ecosystem.
       </p>
-      <button type="button"  class="token-hero-btn fund">Buy Token</button>
+      <button type="button"  class="token-hero-btn fund">Leave a request</button>
+      </div>
     </div>
   </section>
 
@@ -54,7 +57,7 @@
 
 
 <!-- ROADMAP -->
-
+    
 <section class="fund-roadmap-section">
   <div class="fund-roadmap-container">
     <img class="fund_roadmap-img" src="./img/fund_roadmap.png" alt="">
@@ -64,7 +67,21 @@
         <p class="fund-box-phrase">Tell Finity Touch about your project</p>
     </div>
     </div>
-
+    <svg class="fund-roadmap-arrow-mobile" width="47" height="24" viewBox="0 0 47 24" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <linearGradient id="gradient-left-arrow" x1="0%" y1="0%" x2="100%" y2="100%">
+          <stop offset="10.47%" stop-color="#B2FF0F"/>
+          <stop offset="88.29%" stop-color="#76FFEF"/>
+        </linearGradient>
+      </defs>
+      <polygon 
+        points="47,0 23.5,24 0,0" 
+        fill="url(#gradient-left-arrow)" 
+        stroke="#ffffff"
+        stroke-width="1"
+        stroke-linejoin="round"
+      />
+    </svg>
     <div class="fund-step no-bg step-2">
     <img class="fund-step-img  no-bg" src="./img/fund_roadmap_container2.svg" alt="Roadmap Container"  >
       <div class="fund-box step-2">
@@ -72,7 +89,21 @@
         <p class="fund-box-phrase">Finity Foundation's team of analysts will review the application and contact you.</p>
       </div>
     </div>
-
+    <svg class="fund-roadmap-arrow-mobile" width="47" height="24" viewBox="0 0 47 24" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <linearGradient id="gradient-left-arrow" x1="0%" y1="0%" x2="100%" y2="100%">
+          <stop offset="10.47%" stop-color="#B2FF0F"/>
+          <stop offset="88.29%" stop-color="#76FFEF"/>
+        </linearGradient>
+      </defs>
+      <polygon 
+        points="47,0 23.5,24 0,0" 
+        fill="url(#gradient-left-arrow)" 
+        stroke="#ffffff"
+        stroke-width="1"
+        stroke-linejoin="round"
+      />
+    </svg>
     <div class="fund-step no-bg step-3">
     <img class="fund-step-img  no-bg" src="./img/fund_roadmap_container3.svg" alt="Roadmap Container"  >
       <div class="fund-box step-3">
@@ -80,7 +111,21 @@
         <p class="fund-box-phrase">Successful applicants will be contacted by Finity Foundation</p>
       </div>
     </div>
-
+    <svg class="fund-roadmap-arrow-mobile" width="47" height="24" viewBox="0 0 47 24" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <linearGradient id="gradient-left-arrow" x1="0%" y1="0%" x2="100%" y2="100%">
+          <stop offset="10.47%" stop-color="#B2FF0F"/>
+          <stop offset="88.29%" stop-color="#76FFEF"/>
+        </linearGradient>
+      </defs>
+      <polygon 
+        points="47,0 23.5,24 0,0" 
+        fill="url(#gradient-left-arrow)" 
+        stroke="#ffffff"
+        stroke-width="1"
+        stroke-linejoin="round"
+      />
+    </svg>
     <div class="fund-step-branch">
     <div class="fund-branch">
       <div class="fund-step step-4 branch-top">
