--- a/src/pages/token/token.html
+++ b/src/pages/token/token.html
@@ -1,11 +1,16 @@
  <!-- Hero Section -->
   <section class="token-hero-section">
     <div class="token-hero-container">
+      <div class="token-hero-mobile-gif"></div>
+
+      <div class="token-hero-content">
       <h1 class="token-hero-title"> <span>Finity</span><span>Token</span></h1>
       <p class="token-hero-description">
         Finity Token – is an asset that fuels the Finity Touch ecosystem and ensures the development of existing projects and the possibility of discovering new fragments of the ecosystem
       </p>
       <button type="button"  class="token-hero-btn">Buy Token</button>
+      </div>
+
     </div>
   </section>
 
@@ -15,7 +20,7 @@
     <div class="swiper-wrapper token-features-swipper-wrapper">
       <div class="swiper-slide token-feature-item">
         <div class="token-feature-inner">
-            <svg class="token-features-btn-icon" width="30" height="16">
+            <svg class="token-features-btn-icon token" width="30" height="16">
               <use href="img/symbol-defs.svg#icon-token_feature1"></use>
             </svg>
           <p class="token-feature-description">
@@ -27,7 +32,7 @@
 
       <div class="swiper-slide token-feature-item">
         <div class="token-feature-inner">
-            <svg class="token-features-btn-icon" width="30" height="16">
+            <svg class="token-features-btn-icon token" width="30" height="16">
               <use href="img/symbol-defs.svg#icon-token_feature2"></use>
             </svg>
           <p class="token-feature-description">
@@ -39,7 +44,7 @@
 
       <div class="swiper-slide token-feature-item">
         <div class="token-feature-inner">
-            <svg class="token-features-btn-icon" width="30" height="16">
+            <svg class="token-features-btn-icon token" width="30" height="16">
               <use href="img/symbol-defs.svg#icon-token_feature3"></use>
             </svg>
           <p class="token-feature-description">
@@ -62,7 +67,7 @@
       <p class="tokenomics-phrase">There is a total of 1,000,000,000 FNT tokens. Binance Smart Chain is the Issuer of the FNT Token and will distribute FNT tokens in the following areas:</p>
       
       <div class="tokenomics-chart">
-        <svg class="" width="1087" height="826" viewBox="0 0 1087 826" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="tokenomics-chart-svg" width="1087" height="826" viewBox="0 0 1087 826" fill="none" xmlns="http://www.w3.org/2000/svg">
         <defs>
         <linearGradient id="paint0_linear_2_373" x1="438.5" y1="125.5" x2="543.45" y2="479.722" gradientUnits="userSpaceOnUse">
         <stop stop-color="#E200E8"/>
@@ -151,11 +156,15 @@
   <p class="token-roadmap-subtitle">
     There is a total of 1,000,000,000 FNT tokens. Binance Smart Chain is the Issuer of the FNT Token and will distribute FNT tokens in the following areas:
   </p>
-
+    <img class="token-roadmap-mobile" src="./img/token_roadmap_mobile.png" alt="">
   <div class="token-roadmap-container">
+
+    
     <img class="token-roadmap"  src="./img/token_roadmap.png" alt="">
+
+
     <!-- Step 1 -->
-    <div class="roadmap-step">
+    <div class="roadmap-step step-1">
       <h3 class="token-roadmap-stp-count" >STEP 1</h3>
       <div class="token-roadmap-step-point"></div>
       <div class="step-content">
@@ -188,7 +197,7 @@
           </li>
           <li class="token-roadmap-list-item">
             <p class="roadmap-date reversed">JULY 2022</p> 
-            <p class="roadmap-phrase reversed" style="font-size: 22px;">The idea of a big economic game “PlanexLand”</p>
+            <p class="roadmap-phrase step-2 reversed">The idea of a big economic game “PlanexLand”</p>
           </li>          
           <li class="token-roadmap-list-item">
             <p class="roadmap-date reversed">AUGUST 2022</p> 
@@ -234,7 +243,7 @@
           </li>
           <li class="token-roadmap-list-item">
             <p class="roadmap-date reversed">JANUARY 2022</p> 
-            <p class="roadmap-phrase reversed" style="font-size: 22px;">Conduct a land auction</p>
+            <p class="roadmap-phrase reversed">Conduct a land auction</p>
           </li>          
           <li class="token-roadmap-list-item">
             <p class="roadmap-date reversed">FEBRUARY 2022</p> 
@@ -284,11 +293,11 @@
           </li>
           <li class="token-roadmap-list-item">
             <p class="roadmap-date reversed">2024 STEP-02</p> 
-            <p class="roadmap-phrase reversed" style="font-size: 22px;">Release PlanexLand</p>
+            <p class="roadmap-phrase reversed">Release PlanexLand</p>
           </li>          
           <li class="token-roadmap-list-item">
             <p class="roadmap-date reversed">2024 STEP-03</p> 
-            <p class="roadmap-phrase reversed" style="font-size: 22px; letter-spacing: -1px;" >Release of the complete Finity Touch ecosystem</p>
+            <p class="roadmap-phrase step-6 reversed" >Release of the complete Finity Touch ecosystem</p>
           </li>
         </ul>
         </div>
