--- a/main_page.html
+++ b/main_page.html
@@ -576,7 +576,7 @@
         </div>
         <div class="icon linkedin">
           <div class="icon-inner">
-            <img src="./img/token_linkedIn.png" alt="LinkedIn">
+            <img src="./img/token_LinkedIn.png" alt="LinkedIn">
           </div>
         </div>
         <div class="icon reddit">
